@@ -43,11 +43,11 @@
 	<key command="new_layer" shortcut="Shift+N" />
 	<!-- frame -->
 	<key command="new_frame" shortcut="N" />
-<!-- 	<item command="goto_first_frame" shortcut="Up" /> -->
-<!-- 	<item command="goto_previous_frame" name="Left" /> -->
-<!-- 	<item command="goto_next_frame" name="Right" /> -->
-<!-- 	<item command="goto_last_frame" name="Down" /> -->
-<!-- 	<item command="play_animation" name="Enter" /> -->
+	<key command="goto_first_frame" shortcut="Down" />
+	<key command="goto_previous_frame" shortcut="Left" />
+	<key command="goto_next_frame" shortcut="Right" />
+	<key command="goto_last_frame" shortcut="Up" />
+	<key command="play_animation" shortcut="Enter" />
 	<!-- cel -->
 	<key command="cel_properties" shortcut="Shift+Ctrl+P" />
 	<key command="new_cel" shortcut="Shift+Ctrl+N" />
@@ -158,14 +158,14 @@
 	    <separator />
 	    <item command="new_frame" name="&New" />
 	    <item command="remove_frame" name="&Remove" />
-<!-- 	    <separator /> -->
-<!-- 	    <menu name="&Go to"> -->
-<!-- 		<item command="goto_first_frame" name="&First" /> -->
-<!-- 		<item command="goto_previous_frame" name="&Previous" /> -->
-<!-- 		<item command="goto_next_frame" name="&Next" /> -->
-<!-- 		<item command="goto_last_frame" name="&Last" /> -->
-<!-- 	    </menu> -->
-<!-- 	    <item command="play_animation" name="&Play" /> -->
+	    <separator />
+	    <menu name="&Go to">
+		<item command="goto_first_frame" name="&First" />
+		<item command="goto_previous_frame" name="&Previous" />
+		<item command="goto_next_frame" name="&Next" />
+		<item command="goto_last_frame" name="&Last" />
+	    </menu>
+	    <item command="play_animation" name="&Play" />
 	</menu>
 	<menu name="&Cel" id="cel_popup">
 	    <item command="cel_properties" name="&Properties" />
