@@ -1,4 +1,4 @@
-# Copyright (C) 2001-2005, 2007 by David A. Capello		-*-Makefile-*-
+# Copyright (C) 2001-2005, 2007, 2008 by David A. Capello		-*-Makefile-*-
 
 ######################################################################
 # ASE
@@ -28,6 +28,7 @@ COMMON_SOURCES =					\
 	src/commands/cmd_flatten_layers.c		\
 	src/commands/cmd_flip.c				\
 	src/commands/cmd_frame_properties.c		\
+	src/commands/cmd_goto_frame.c			\
 	src/commands/cmd_invert_mask.c			\
 	src/commands/cmd_layer_properties.c		\
 	src/commands/cmd_link_cel.c			\
@@ -46,6 +47,7 @@ COMMON_SOURCES =					\
 	src/commands/cmd_options.c			\
 	src/commands/cmd_palette_editor.c		\
 	src/commands/cmd_paste.c			\
+	src/commands/cmd_play_animation.c		\
 	src/commands/cmd_play_flic.c			\
 	src/commands/cmd_preview.c			\
 	src/commands/cmd_record_screen.c		\
