@@ -1,5 +1,5 @@
 /* ASE - Allegro Sprite Editor
- * Copyright (C) 2001-2005, 2007  David A. Capello
+ * Copyright (C) 2001-2005, 2007, 2008  David A. Capello
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -112,7 +112,6 @@ bool editor_cursor_is_subpixel(JWidget editor);
 /* src/gui/editor/keys.c */
 
 int editor_keys_toset_zoom(JWidget editor, int scancode);
-int editor_keys_toset_frame(JWidget editor, int scancode);
 int editor_keys_toset_brushsize(JWidget editor, int scancode);
 int editor_keys_toget_pixels(JWidget editor, int scancode);
 
