@@ -94,55 +94,6 @@ int editor_keys_toset_zoom(JWidget widget, int scancode)
   return FALSE;
 }
 
-int editor_keys_toset_frame(JWidget widget, int scancode)
-{
-  Editor *editor = editor_data(widget);
-
-  if ((editor->sprite) &&
-/*       (jwidget_has_mouse (widget)) && */
-      !(key_shifts & (KB_SHIFT_FLAG | KB_CTRL_FLAG | KB_ALT_FLAG))) {
-    int old_frame = editor->sprite->frame;
-
-    switch (scancode) {
-      /* previous frame */
-      case KEY_LEFT:
-	editor->sprite->frame--;
-	if (editor->sprite->frame < 0)
-	  editor->sprite->frame = editor->sprite->frames-1;
-	break;
-
-	/* last frame */
-      case KEY_UP:
-	editor->sprite->frame = editor->sprite->frames-1;
-	break;
-
-	/* next frame */
-      case KEY_RIGHT:
-	editor->sprite->frame++;
-	if (editor->sprite->frame >= editor->sprite->frames)
-	  editor->sprite->frame = 0;
-	break;
-
-	/* first frame */
-      case KEY_DOWN:
-	editor->sprite->frame = 0;
-	break;
-
-	/* nothing */
-      default:
-	return FALSE;
-    }
-
-    if (editor->sprite->frame != old_frame)
-      update_screen_for_sprite(editor->sprite);
-
-    editor_update_status_bar_for_standby(widget);
-    return TRUE;
-  }
-
-  return FALSE;
-}
-
 int editor_keys_toset_brushsize(JWidget widget, int scancode)
 {
   Editor *editor = editor_data(widget);
